--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
 <!doctype html>
 
 <html>
-    <head> 
 
-        <title>Group Task ICS</title>
-
-    </head>
-
-    <h1> I am Pawan from Nepal</h1>
+    <h1> About Us </h1>
 
         <body>
+
+            <p> I am Pawan. I came from Nepal and currently studying IT in Centria UAS in Kokkola, Finland. You can check my portfolio by clicking the link (my name) below.</p>
 
             <p> 
                 <a href="https://pawanmanmalego.github.io/"> Pawan Man Malego </a>
